<?xml version="1.0" encoding="utf-8"?><!--
Project by Gregor Santner (https://gsantner.net)

To the extent possible under law, the person who associated CC0 with
this file has waived all copyright and related or neighboring rights
to the public domain.

You should have received a copy of the CC0 legalcode along with this
work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
-->
<resources>
    <string name="open_navdrawer">Open navigation drawer</string>
    <string name="close_navdrawer">Close navigation drawer</string>
    <string name="humans">Humans</string>
    <string name="cartoon">Cartoon</string>
    <string name="animals">Animals</string>
    <string name="custom">Custom</string>
    <string name="rage">Rage</string>
    <string name="saved">Saved</string>
    <string name="favs">Favs</string>
    <string name="create">Create</string>
    <string name="hidden">Hidden</string>
    <string name="rows_with_title">Rows with title</string>
    <string name="picture_grid">Picture Grid</string>
    <string name="get_picture_from_gallery">Get picture from Gallery</string>
    <string name="get_picture_from_camera">Get picture from Camera</string>
    <string name="error_cannot_start_camera">Could not start Camera.</string>
    <string name="error_picture_selection">No picture selected, taken or saved.</string>
    <string name="error_couldnot_load_picture_from_storage">Could not load picture from storage.</string>
    <string name="donate">Donate</string>
    <string name="recommend">Recommend</string>
    <string name="changelog">Changelog</string>
    <string name="exit">Exit</string>
    <string name="yes">yes</string>
    <string name="text_size">Text Size</string>
    <string name="text_color">Text Color</string>
    <string name="border_color">Border Color</string>
    <string name="successfully_saved">Successfully saved!</string>
    <string name="top_caption">Top caption</string>
    <string name="bottom_caption">Bottom caption</string>
    <string name="enter_caption">Enter caption</string>
    <string name="font">Font</string>
    <string name="keep_editing">Keep editing</string>
    <string name="text">Text</string>
    <string name="size">Size</string>
    <string name="background">Background</string>
    <string name="border">Border</string>
    <string name="picture">Picture</string>
    <string name="about">About</string>
    <string name="developed_by">Developed by</string>
    <string name="licenses">Licenses</string>
    <string name="show_licenses">Show licenses</string>
    <string name="contributors">Contributors</string>
    <string name="more_information">More information</string>
    <string name="show_third_party_licenses">Show 3rd party licenses</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="gnu_gplv3_license">Show license of the app</string>
    <string name="settings">Settings</string>
    <string name="all_caps">All caps</string>
    <string name="caps_off">Caps off</string>
    <string name="rotate">Rotate</string>
    <string name="render_quality">Render-Quality</string>
    <string name="picture_quality_percent" formatted="false">Quality and size of pictures. Higher values mean a longer load time. Depending on device hardware and picture size the app may not work as expected if the value is above 25%.</string>
    <string name="clear_thumbnails">Clear thumbnails</string>
    <string name="columns_portrait">Columns portrait</string>
    <string name="columns_landscape">Columns landscape</string>
    <string name="appearance">Appearance</string>
    <string name="default_mode">Default Mode</string>
    <string name="functionality">Functionality</string>
    <string name="save_when_pressing_back">Save when pressing back</string>
    <string name="padding">Padding</string>
    <string name="overview">Overview</string>
    <string name="editor">Editor</string>
    <string name="hide_statusbar_at_this_view">Hide the status bar at this view</string>
    <string name="hide_statusbar">Hide status bar</string>
    <string name="thumbnail_quality">Thumbnail quality</string>
    <string name="view_type">View Type</string>
    <string name="show_in_device_gallery">Show in device gallery</string>
    <string name="language">Language</string>
    <string name="language_change_restart_description">Change language of this app. Restart app for changes to take effect</string>
    <string name="error_cannot_create_save_directory">Error: Cannot create save directory</string>
    <string name="other">Other</string>
    <string name="downloading">Downloading</string>
    <string name="downloading_failed">Downloading failed</string>
    <string name="unzipping">Unzipping</string>
    <string name="successfully_downloaded">Successfully downloaded</string>
    <string name="download_latest_assets">Download latest assets</string>
    <string name="download_latest_assets_checking_description">Checking if there are more recent assets available</string>
    <string name="palette">Palette</string>
    <string name="presets">Presets</string>
    <string name="select_color">Select color</string>
    <string name="code">Code</string>
    <string name="favourite">Favourite</string>
    <string name="remove_favourite">Remove favourite</string>
    <string name="show_title">Show title</string>
    <string name="edit_title">Edit title</string>
    <string name="hide">Hide</string>
    <string name="unhide">Unhide</string>
    <string name="tap_here_to_add_caption">Tap Here to add Caption</string>


    <string name="search_meme__appspecific">Search Meme</string>
    <string name="share_meme_via__appspecific">Share your Meme via…</string>
    <string name="save_meme__appspecific">Save Meme</string>
    <string name="share_meme__appspecific">Share Meme</string>
    <string name="create_meme__appspecific">Create Meme</string>
    <string name="delete_meme__appspecific">Delete meme</string>
    <string name="no_favourites_description__appspecific">No favourites yet.\nUse the star button of a meme template to add it to the favourites.</string>
    <string name="no_custom_templates_description__appspecific">No custom templates yet.\nPlaced template images here:%1$s</string>
    <string name="no_memes_saved_description__appspecific">No memes saved yet.\nUse the top save button after editing a meme.</string>
    <string name="default_mode_description_description__appspecific">Default Mode to open at startup (Create, Favs or Saved)</string>
    <string name="press_back_again_to_stop_editing__appspecific">Press back again to stop editing this meme. Meme will be lost if it is not already saved.</string>
    <string name="saved_meme_successfully__appspecific">This meme was successfully stored on your device. Do you want to quit editing this meme now?</string>
    <string name="save_when_pressing_back_description__appspecific">Automatically save meme if pressing back and there was some input</string>
    <string name="shuffle_meme_list_description__appspecific">Shuffle the list of memes after selecting a category</string>
    <string name="shuffle_meme_list__appspecific">Shuffle meme list</string>
    <string name="view_type_memelist__appspecific">Set view type (Picture grid, Rows with title)</string>
    <string name="error_storage_permission__appspecific">Need permission for storage to save memes and templates</string>
    <string name="download_latest_assets_message__appspecific">This will download fonts and meme templates (about 20 MB data).</string>
    <string name="download_latest_assets_message_description__appspecific">In settings you can manually get the latest assets later too.</string>
    <string name="main_view">Main View</string>
    <string name="edit_picture">Edit picture</string>
    <string name="general">General</string>
    <string name="picture_viewer">Picture viewer</string>
    <string name="pictures_shown_in_gallery_and_this_app">Pictures shown in gallery and this app</string>


    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="translate">Translate</string>
    <string name="more_info_and_help">More info and help</string>
    <string name="report_bugs">Report bugs</string>
    <string name="more_info_on_how_to_donate_or_otherwise_support_this_project_text">More info on donating or supporting this project</string>
    <string name="android_contribution_guide">Android contribution guide</string>
    <string name="more_info_on_how_to_contribute_to_foss_android_projects">More info on contributing to Open Source projects, especially Android apps</string>
    <string name="join_community">Join the Community</string>
    <string name="bug_reports_suggest_improvements">Give feedback, report bugs or suggest improvements</string>
    <string name="help_translating_this_app">Translate this app into other languages</string>
    <string name="source_code">Source Code</string>
    <string name="project_license">Project License</string>
    <string name="project_contribution_info">Project contribution info</string>
    <string name="more_info_on_how_to_contribute_to_this_project">More info on how to contribute to this project</string>
    <string name="contribute_code_to_this_project_anybody_welcome">Contribute code to the project. Everybody is welcome to do so, including newcomers</string>
    <string name="project_team">Project Team</string>
    <string name="contributors_public_add_yourself_description">Show contributor info. Provide it to be shown here on an opt-in basis after contributing</string>
    <string name="help">Help</string>
    <string name="more">More</string>
    <string name="community">Community</string>
    <string name="contribute">Contribute</string>
    <string name="the_file_could_not_be_loaded">The file could not be loaded.</string>

    <string name="close">Close</string>
    <string name="do_you_like_this_project_want_donate_to_keep_alive">Do you like this project? Do you want that it gets improved and problems fixed?\n\nDeveloping apps and writing related blog posts costs a lot of time! If you want to help so that the project can go on, please consider a small donation!\n\nThis project is developed in leisure time, completely for free and without any advertisements!</string>
    <string name="all">All</string>
    <string name="global_text_settings">Global text settings</string>
    <string name="show_image">Show image</string>
    <string name="show_edited_image">Show edited image</string>
    <string name="save_as_template">Save as template</string>

</resources>
