<?xml version="1.0" encoding="utf-8"?><!--
/*#######################################################
 *
 *   Maintained by Gregor Santner, 2016-
 *   https://gsantner.net/
 *
 *   License of this file: GNU GPLv3 (Commercial upon request)
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program. If not, see <http://www.gnu.org/licenses/>.
#########################################################*/
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav0"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_mode_create"
            android:checked="true"
            android:icon="@drawable/ic_gavel_white_48px"
            android:title="@string/create" />

        <item
            android:id="@+id/action_mode_favs"
            android:icon="@drawable/ic_star_black_32dp"
            android:title="@string/favs" />

        <item
            android:id="@+id/action_mode_saved"
            android:icon="@drawable/ic_save_white_48px"
            android:title="@string/saved" />

        <item
            android:id="@+id/action_mode_hidden"
            android:icon="@drawable/ic_remove_circle_black_24dp"
            android:title="@string/hidden" />
    </group>

    <group
        android:id="@+id/nav1"
        android:checkableBehavior="none">
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_info_black_48px"
            android:title="@string/about" />

        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings_white_48px"
            android:title="@string/settings" />

        <item
            android:id="@+id/action_exit"
            android:icon="@drawable/ic_cancel_black_48px"
            android:title="@string/exit" />
    </group>


    <group
        android:id="@+id/nav2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/action_recommend"
            android:icon="@drawable/ic_thumb_up_black_48px"
            android:title="@string/recommend" />
        <item
            android:id="@+id/action_donate"
            android:icon="@drawable/ic_favorite_white_48px"
            android:title="@string/donate"
            android:visible="false" />

        <item
            android:id="@+id/action_homepage_code"
            android:icon="@drawable/ic_language_white_48px"
            android:title="@string/code" />
    </group>
</menu>