<?xml version="1.0" encoding="utf-8"?><!--
/*#######################################################
 *
 *   Maintained 2016-2023 by Gregor Santner <gsantner AT mailbox DOT org>
 *
 *   License of this file: GNU GPLv3
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program. If not, see <http://www.gnu.org/licenses/>.
#########################################################*/
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/memeitemadapter__popup_menu__action_title"
        android:icon="@drawable/ic_title_black_24dp"
        android:title="@string/show_title"/>
    <item
        android:id="@+id/memeitemadapter__popup_menu__action_fav"
        android:icon="@drawable/ic_star_border_black_24dp"
        android:title="@string/favourite"/>
    <item
        android:id="@+id/memeitemadapter__popup_menu__action_hide"
        android:icon="@drawable/ic_visibility_black_24dp"
        android:title="@string/hide"/>
</menu>